src/main/java/by/bsuir/course3/yapis/graphLangTranslator/syntaxAnalysis/parsing/GraphLangGrammarParser.java
// Generated from main\java\by\bsuir\course3\yapis\graphLangTranslator\syntaxAnalysis\parsing\GraphLangGrammar.g4 by ANTLR 4.2
package main.java.by.bsuir.course3.yapis.graphLangTranslator.syntaxAnalysis.parsing;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraphLangGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF_WORD=1, RETURN_WORD=2, ELSE_WORD=3, SWITCH_WORD=4, WHILE_WORD=5, UNTIL_WORD=6, 
		FOR_WORD=7, NULL_WORD=8, BREAK_WORD=9, SEMICOLON_WORD=10, OPENING_BRACKET_WORD=11, 
		CLOSING_BRACKET_WORD=12, OPENING_CURLY_BRACKET_WORD=13, CLOSING_CURLY_BRACKET_WORD=14, 
		OPENING_SQUARE_BRACKET_WORD=15, CLOSING_SQUARE_BRACKET_WORD=16, COMMA_WORD=17, 
		EQUAL_SIGN_WORD=18, PLUS_WORD=19, MINUS_WORD=20, MULTIPLICATION_WORD=21, 
		DIVISION_WORD=22, SEPARATOR_WORD=23, GREATER_WORD=24, GREATER_OR_EQUAL_WORD=25, 
		LESS_WORD=26, LESS_OR_EQUAL_WORD=27, EQUAL_WORD=28, NOT_EQUAL_WORD=29, 
		BOOLEAN_LITERAL=30, TRUE_LITERAL=31, FALSE_LITERAL=32, INTEGER_NUMBER=33, 
		REAL_NUMBER=34, STRING=35, TYPE_WORD=36, TYPE_SPECIFIER=37, IDENTIFIER_WORD=38, 
		VOID_TYPE=39, BOOLEAN_TYPE=40, INT_TYPE=41, REAL_TYPE=42, STRING_TYPE=43, 
		ARC_TYPE=44, NODE_TYPE=45, GRAPH_TYPE=46, CONSTANT_TYPE_SPEC=47, GLOBAL_TYPE_SPEC=48, 
		TRASH=49, LINE_COMMENT=50, MULTI_LINE_COMMENT=51;
	public static final String[] tokenNames = {
		"<INVALID>", "'if'", "'return'", "'else'", "'switch'", "'while'", "'until'", 
		"'for'", "'null'", "'break'", "';'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "','", "'='", "'+'", "'-'", "'*'", "'/'", "'|'", "'>'", "'>='", 
		"'<'", "'<='", "'=='", "'<>'", "BOOLEAN_LITERAL", "'true'", "'false'", 
		"INTEGER_NUMBER", "REAL_NUMBER", "STRING", "TYPE_WORD", "TYPE_SPECIFIER", 
		"IDENTIFIER_WORD", "'Void'", "'Boolean'", "'Int'", "'Real'", "'String'", 
		"'Arc'", "'Node'", "'Graph'", "'#'", "'@'", "TRASH", "LINE_COMMENT", "MULTI_LINE_COMMENT"
	};
	public static final int
		RULE_document = 0, RULE_function = 1, RULE_functionHeader = 2, RULE_functionParametersSection = 3, 
		RULE_functionArgumentsSection = 4, RULE_functionBody = 5, RULE_functionCall = 6, 
		RULE_blockStatement = 7, RULE_terminalStatement = 8, RULE_cycleOperator = 9, 
		RULE_whileCycle = 10, RULE_untilCycle = 11, RULE_forCycle = 12, RULE_forCondition = 13, 
		RULE_preCondition = 14, RULE_condition = 15, RULE_postCondition = 16, 
		RULE_conditionalOperator = 17, RULE_ifOperator = 18, RULE_switchOperator = 19, 
		RULE_variableAssignment = 20, RULE_variable = 21, RULE_statement = 22, 
		RULE_atom = 23, RULE_primitiveAtom = 24, RULE_breakStatement = 25, RULE_returnStatement = 26, 
		RULE_variableInitialization = 27, RULE_variableDefenition = 28, RULE_typeDefinition = 29;
	public static final String[] ruleNames = {
		"document", "function", "functionHeader", "functionParametersSection", 
		"functionArgumentsSection", "functionBody", "functionCall", "blockStatement", 
		"terminalStatement", "cycleOperator", "whileCycle", "untilCycle", "forCycle", 
		"forCondition", "preCondition", "condition", "postCondition", "conditionalOperator", 
		"ifOperator", "switchOperator", "variableAssignment", "variable", "statement", 
		"atom", "primitiveAtom", "breakStatement", "returnStatement", "variableInitialization", 
		"variableDefenition", "typeDefinition"
	};

	@Override
	public String getGrammarFileName() { return "GraphLangGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphLangGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public TerminalNode EOF() { return getToken(GraphLangGrammarParser.EOF, 0); }
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60); function();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TYPE_WORD || _la==TYPE_SPECIFIER );
			setState(65); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionHeaderContext functionHeader() {
			return getRuleContext(FunctionHeaderContext.class,0);
		}
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); functionHeader();
			setState(68); functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionHeaderContext extends ParserRuleContext {
		public TypeDefinitionContext typeDefinition() {
			return getRuleContext(TypeDefinitionContext.class,0);
		}
		public TerminalNode IDENTIFIER_WORD() { return getToken(GraphLangGrammarParser.IDENTIFIER_WORD, 0); }
		public FunctionParametersSectionContext functionParametersSection() {
			return getRuleContext(FunctionParametersSectionContext.class,0);
		}
		public FunctionHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterFunctionHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitFunctionHeader(this);
		}
	}

	public final FunctionHeaderContext functionHeader() throws RecognitionException {
		FunctionHeaderContext _localctx = new FunctionHeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); typeDefinition();
			setState(71); match(IDENTIFIER_WORD);
			setState(72); functionParametersSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParametersSectionContext extends ParserRuleContext {
		public List<TerminalNode> COMMA_WORD() { return getTokens(GraphLangGrammarParser.COMMA_WORD); }
		public List<VariableDefenitionContext> variableDefenition() {
			return getRuleContexts(VariableDefenitionContext.class);
		}
		public TerminalNode COMMA_WORD(int i) {
			return getToken(GraphLangGrammarParser.COMMA_WORD, i);
		}
		public TerminalNode OPENING_BRACKET_WORD() { return getToken(GraphLangGrammarParser.OPENING_BRACKET_WORD, 0); }
		public VariableDefenitionContext variableDefenition(int i) {
			return getRuleContext(VariableDefenitionContext.class,i);
		}
		public TerminalNode CLOSING_BRACKET_WORD() { return getToken(GraphLangGrammarParser.CLOSING_BRACKET_WORD, 0); }
		public FunctionParametersSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParametersSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterFunctionParametersSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitFunctionParametersSection(this);
		}
	}

	public final FunctionParametersSectionContext functionParametersSection() throws RecognitionException {
		FunctionParametersSectionContext _localctx = new FunctionParametersSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionParametersSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(OPENING_BRACKET_WORD);
			setState(83);
			_la = _input.LA(1);
			if (_la==TYPE_WORD || _la==TYPE_SPECIFIER) {
				{
				setState(75); variableDefenition();
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA_WORD) {
					{
					{
					setState(76); match(COMMA_WORD);
					setState(77); variableDefenition();
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(85); match(CLOSING_BRACKET_WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionArgumentsSectionContext extends ParserRuleContext {
		public List<TerminalNode> COMMA_WORD() { return getTokens(GraphLangGrammarParser.COMMA_WORD); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode COMMA_WORD(int i) {
			return getToken(GraphLangGrammarParser.COMMA_WORD, i);
		}
		public TerminalNode OPENING_BRACKET_WORD() { return getToken(GraphLangGrammarParser.OPENING_BRACKET_WORD, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode CLOSING_BRACKET_WORD() { return getToken(GraphLangGrammarParser.CLOSING_BRACKET_WORD, 0); }
		public FunctionArgumentsSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionArgumentsSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterFunctionArgumentsSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitFunctionArgumentsSection(this);
		}
	}

	public final FunctionArgumentsSectionContext functionArgumentsSection() throws RecognitionException {
		FunctionArgumentsSectionContext _localctx = new FunctionArgumentsSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionArgumentsSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(OPENING_BRACKET_WORD);
			setState(96);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL_WORD) | (1L << OPENING_BRACKET_WORD) | (1L << MINUS_WORD) | (1L << BOOLEAN_LITERAL) | (1L << INTEGER_NUMBER) | (1L << REAL_NUMBER) | (1L << STRING) | (1L << IDENTIFIER_WORD))) != 0)) {
				{
				setState(88); statement(0);
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA_WORD) {
					{
					{
					setState(89); match(COMMA_WORD);
					setState(90); statement(0);
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(98); match(CLOSING_BRACKET_WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public TerminalNode CLOSING_CURLY_BRACKET_WORD() { return getToken(GraphLangGrammarParser.CLOSING_CURLY_BRACKET_WORD, 0); }
		public TerminalStatementContext terminalStatement(int i) {
			return getRuleContext(TerminalStatementContext.class,i);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public List<TerminalStatementContext> terminalStatement() {
			return getRuleContexts(TerminalStatementContext.class);
		}
		public TerminalNode OPENING_CURLY_BRACKET_WORD() { return getToken(GraphLangGrammarParser.OPENING_CURLY_BRACKET_WORD, 0); }
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitFunctionBody(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(OPENING_CURLY_BRACKET_WORD);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF_WORD) | (1L << SWITCH_WORD) | (1L << WHILE_WORD) | (1L << FOR_WORD) | (1L << OPENING_CURLY_BRACKET_WORD) | (1L << TYPE_WORD) | (1L << TYPE_SPECIFIER) | (1L << IDENTIFIER_WORD))) != 0)) {
				{
				{
				setState(101); terminalStatement();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107); returnStatement();
			setState(108); match(CLOSING_CURLY_BRACKET_WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER_WORD() { return getToken(GraphLangGrammarParser.IDENTIFIER_WORD, 0); }
		public FunctionArgumentsSectionContext functionArgumentsSection() {
			return getRuleContext(FunctionArgumentsSectionContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitFunctionCall(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(IDENTIFIER_WORD);
			setState(111); functionArgumentsSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public TerminalNode CLOSING_CURLY_BRACKET_WORD() { return getToken(GraphLangGrammarParser.CLOSING_CURLY_BRACKET_WORD, 0); }
		public TerminalStatementContext terminalStatement(int i) {
			return getRuleContext(TerminalStatementContext.class,i);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public List<TerminalStatementContext> terminalStatement() {
			return getRuleContexts(TerminalStatementContext.class);
		}
		public TerminalNode OPENING_CURLY_BRACKET_WORD() { return getToken(GraphLangGrammarParser.OPENING_CURLY_BRACKET_WORD, 0); }
		public BlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterBlockStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitBlockStatement(this);
		}
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_blockStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(OPENING_CURLY_BRACKET_WORD);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF_WORD) | (1L << SWITCH_WORD) | (1L << WHILE_WORD) | (1L << FOR_WORD) | (1L << OPENING_CURLY_BRACKET_WORD) | (1L << TYPE_WORD) | (1L << TYPE_SPECIFIER) | (1L << IDENTIFIER_WORD))) != 0)) {
				{
				{
				setState(114); terminalStatement();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			switch (_input.LA(1)) {
			case BREAK_WORD:
				{
				setState(120); breakStatement();
				}
				break;
			case RETURN_WORD:
				{
				setState(121); returnStatement();
				}
				break;
			case CLOSING_CURLY_BRACKET_WORD:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(124); match(CLOSING_CURLY_BRACKET_WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalStatementContext extends ParserRuleContext {
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public ConditionalOperatorContext conditionalOperator() {
			return getRuleContext(ConditionalOperatorContext.class,0);
		}
		public TerminalNode SEMICOLON_WORD() { return getToken(GraphLangGrammarParser.SEMICOLON_WORD, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public VariableInitializationContext variableInitialization() {
			return getRuleContext(VariableInitializationContext.class,0);
		}
		public CycleOperatorContext cycleOperator() {
			return getRuleContext(CycleOperatorContext.class,0);
		}
		public VariableAssignmentContext variableAssignment() {
			return getRuleContext(VariableAssignmentContext.class,0);
		}
		public TerminalStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminalStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).enterTerminalStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphLangGrammarListener ) ((GraphLangGrammarListener)listener).exitTerminalStatement(this);
		}
	}

	public final TerminalStatementContext terminalStatement() throws RecognitionException {
		TerminalStatementContext _localctx = new TerminalStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_terminalStatement);
		try {
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(129);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(126); functionCall();
					}
					break;

				case 2:
					{
					setState(127); variableAssignment();
					}
					break;

				case 3:
					{
					setState(128); variableInitialization();
					}
					break;
				}
				setState(131); match(SEMICOLON_WORD);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); cycleOperator();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134); conditionalOperator();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135); blockStatement();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(136); function();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
